--- a/index.css
+++ b/index.css
@@ -2,11 +2,70 @@
 body {font-family: georgia, serif;
 	background-color: #DEB887;}
 
-@media all and (min-width: 769px) {
-
 .header {position: relative;
 		text-align: center;
 		font-size: 300%;
+		}
+
+.box {width: 100%;
+		height: 100px;
+		background-color: black;
+		margin: 0;
+		padding: 0;
+	}
+
+.bio {text-align: left;
+	font-size: 200%;
+	font-kerning: 80%;
+	margin-right:50px;
+	margin-left: 50px;
+	position: relative;
+	top: 10px;
+	}
+				
+.nav a {text-decoration: none;
+		font-size: 40px;
+		color: white;
+		}
+ 
+ .nav a:hover {color: blue;}
+
+#link1 a {position: relative;
+		top: 50px;
+		left: 50px;
+		}
+
+#link2 a {position: relative;
+		left: 650px;
+		}
+
+ #link3 a {position:relative;
+ 		left: 1200px;
+ 		bottom:50px;
+ 		}
+
+.photo {background-image:url('photo.jpg');
+		width: 500px;
+		height: 500px;
+		margin: 20px;
+		border: solid;
+		background-size: 100% 100%;
+		float: left;
+		}
+
+
+@media all and (max-width: 992px) {
+
+.header {position: relative;
+		text-align: center;
+		font-size: 250%;
+}
+
+.box {width: 100%;
+		height: 100px;
+		background-color: black;
+		margin: 0;
+		padding: 0;
 }
 
 .bio{text-align: left;
@@ -17,18 +76,28 @@ body {font-family: georgia, serif;
 	position: relative;
 	top: 10px;
 	}
+				
+.nav a {text-decoration: none;
+		font-size: 40px;
+		color: white;
+		}
+ 
+ .nav a:hover {color: blue;
+ 		}
 
-.nav{
-		width: 1000px;
-		height: 100px;
-		margin: 20px;
-	}
+#link1 a {position: relative;
+		top: 50px;
+		left: 50px;
+		}
 
-.nav ul a { list-style-type: none;
-			text-decoration: none;
-			font-size: 200%;
- }
+#link2 a {position: relative;
+		left: 400px;
+		}
 
+ #link3 a {position:relative;
+ 		left: 800px;
+ 		bottom:50px;
+ 		}
 
 
 .photo {background-image:url('photo.jpg');
@@ -42,13 +111,14 @@ body {font-family: georgia, serif;
 
 }
 
+
 @media all and (max-width: 480px) {
 
 .header {
 		text-align: center;
 		font-size: 120%;
 		position: relative;
-		margin-top: 100px;
+		margin-top: 35px;
 	}
 
 
@@ -60,34 +130,49 @@ body {font-family: georgia, serif;
 	float: right;
 	}
 
-.nav   {position:relative;
-		top: 2px;
-		right: 2px;
-		left: 2px;
-		bottom:20px;
-		width: 50px;
-		height: 10px;
-		margin: 30px;
-	}
+.box {width: 100%;
+		height: 100px;
+		background-color: black;
+		margin: 0;
+		padding: 0;}
 
-.nav ul a { list-style-type: none;
-			text-decoration: none;
- }
+.nav a {text-decoration: none;
+		font-size: 30px;
+		color: white;
+		margin: 5px;
+		}
+
+ .nav a:hover {color: blue;}
+
+#link1 a {position: relative;
+		top: 49px;
+		left: 20px;
+		margin-right: 20%;
+		}
+
+#link2 a {position: relative;
+		left: 180px;
+		top: 15px;
+		}
+
+ #link3 a {position:relative;
+ 		left: 350px;
+ 		bottom:20px;
+ 		margin-right: 20px;
+ 		}
 
 .photo {background-image:url('photo.jpg');
 		width: 250px;
 		height: 250px;
 		border: solid;
 		background-size: 100% 100%;
-		position: relative;
 		margin: 0 auto;
-		top: 20%;
-		right: 20px;
-		left: 20px;
+		position: relative;
+		left: 100px;
+		right: 100px;
 		}
+
 }
-
-
 
 @media all and (min-width: 481px) and (max-width: 768px){
 
@@ -95,37 +180,55 @@ body {font-family: georgia, serif;
 		text-align: center;
 		font-size: 120%;
 		top: 40px;
-		bottom: 40px;
+		bottom: 50px;
 		}
 
-.bio {text-align: left;
-	font-size: 150%;
+.bio {text-align: center;
+	font-size: 100%;
 	font-kerning: 80%;
-	margin-right:20px;
-	margin-left: 30px;
-	margin-top:30px;
+	margin-right:10px;
+	margin-left: 10px;
+	float: right;
 	}
 
-.nav { width: 30px;
-		height: 10px;
-		font-size:100%;
+.nav { 	width: 30px;
+		height: 50px;
 		font-size:100%;
 	}
 
-.nav ul a { list-style-type: none;
-			text-decoration: none;
- }
+#link1 a {position: relative;
+		top: 50px;
+		left: 20px;
+		margin-left: 30px;
+		}
+
+#link2 a {position: relative;
+		left: 280px;
+		}
+
+ #link3 a {position:relative;
+ 		left: 550px;
+ 		bottom: 50px;
+ 		}
+
 
 .photo {background-image:url('photo.jpg');
 		width: 250px;
 		height: 250px;
 		border: solid;
 		background-size: 100% 100%;
-		margin: 0 auto;
+		top-margin: 60px;
 		position: relative;
+		left: 230px;
+		right: 100px;
 		top: 20px;
 		}
 
+.box {width: 100%;
+		height: 110px;
+		background-color: black;
+		margin: 0;
+		}
 
 }
 
