--- a/portfolio.css
+++ b/portfolio.css
@@ -2,26 +2,90 @@
 body {font-family: georgia, serif;
 	background-color: #DEB887;}
 
-@media all and (min-width: 769px) {
-
 .header {position: relative;
 		text-align: center;
 		font-size: 300%;
-}
+		}
 
 .text{text-align: center;
 	font-size: 400%;
 	font-kerning: 80%;
 	}
 
-.nav{
-		width: 1000px;
+.box {width: 100%;
 		height: 100px;
-		font-size:100%;
-		margin: 20px;
-		font-size:150%;
+		background-color: black;
+		margin: 0;
+		padding: 0;
 	}
 
+.nav a {text-decoration: none;
+		font-size: 40px;
+		color: white;
+		}
+ 
+ .nav a:hover {color: blue;}
+
+#link1 a {position: relative;
+		top: 50px;
+		left: 50px;
+		}
+
+#link2 a {position: relative;
+		left: 650px;
+		}
+
+ #link3 a {position:relative;
+ 		left: 1200px;
+ 		bottom:50px;
+ 		}
+
+
+@media all and (max-width: 992px) {
+
+.header {position: relative;
+		text-align: center;
+		font-size: 250%;
+}
+
+.box {width: 100%;
+		height: 100px;
+		background-color: black;
+		margin: 0;
+		padding: 0;
+}
+
+.header {position: relative;
+		text-align: center;
+		font-size: 300%;
+		}
+
+.text{text-align: center;
+	font-size: 400%;
+	font-kerning: 80%;
+	}
+				
+.nav a {text-decoration: none;
+		font-size: 40px;
+		color: white;
+		}
+ 
+ .nav a:hover {color: blue;
+ 		}
+
+#link1 a {position: relative;
+		top: 50px;
+		left: 50px;
+		}
+
+#link2 a {position: relative;
+		left: 400px;
+		}
+
+ #link3 a {position:relative;
+ 		left: 800px;
+ 		bottom:50px;
+ 		}
 }
 
 
@@ -31,20 +95,43 @@ body {font-family: georgia, serif;
 		text-align:center;
 		margin-left:20px;
 		font-size: 100%;
-}
+	}
 
 .text{text-align: center;
 	font-size: 200%;
 	font-kerning: 80%;
 	}
 
-.nav{
-		width: 1000px;
+.box {width: 100%;
 		height: 100px;
-		font-size:100%;
-		margin: 20px;
-		font-size:150%;
-	}
+		background-color: black;
+		margin: 0;
+		padding: 0;}
+
+.nav a {text-decoration: none;
+		font-size: 30px;
+		color: white;
+		margin: 5px;
+		}
+
+ .nav a:hover {color: blue;}
+
+#link1 a {position: relative;
+		top: 49px;
+		left: 20px;
+		margin-right: 20%;
+		}
+
+#link2 a {position: relative;
+		left: 180px;
+		top: 15px;
+		}
+
+ #link3 a {position:relative;
+ 		left: 350px;
+ 		bottom:20px;
+ 		margin-right: 20px;
+ 		}
 
 }
 
@@ -56,19 +143,37 @@ body {font-family: georgia, serif;
 		text-align:center;
 		margin-left:20px;
 		font-size: 100%;
-}
+		}
 
 .text{text-align: center;
 	font-size: 200%;
 	font-kerning: 80%;
 	}
 
-.nav{
-		width: 1000px;
-		height: 100px;
+.nav { 	width: 30px;
+		height: 50px;
 		font-size:100%;
-		margin: 20px;
-		font-size:150%;
 	}
+
+#link1 a {position: relative;
+		top: 50px;
+		left: 20px;
+		margin-left: 30px;
+		}
+
+#link2 a {position: relative;
+		left: 280px;
+		}
+
+ #link3 a {position:relative;
+ 		left: 550px;
+ 		bottom: 50px;
+ 		}
+
+.box {width: 100%;
+		height: 110px;
+		background-color: black;
+		margin: 0;
+		}
 
 }
