--- a/contact.css
+++ b/contact.css
@@ -12,6 +12,12 @@ body {font-family: georgia, serif;
 	font-kerning: 80%;
 	}
 
+.list {text-align: center;
+		font-size:40px;
+	}
+
+
+
 .box {width: 100%;
 		height: 100px;
 		background-color: black;
@@ -40,6 +46,18 @@ body {font-family: georgia, serif;
  		bottom:50px;
  		}
 
+ .footer {
+	width: 100%;
+	height: 100px;
+	background-color: black;
+	margin-top: 100px;
+}
+
+.endtext {color: white;
+		text-align: center;
+		position: relative;
+		top: 50px;}
+
 @media all and (max-width: 992px) {
 
 .header {position: relative;
@@ -50,6 +68,10 @@ body {font-family: georgia, serif;
 .text{text-align: center;
 	font-size: 200%;
 	font-kerning: 80%;
+	}
+
+.list {text-align: center;
+		font-size:40px;
 	}
 
 .box {width: 100%;
@@ -101,6 +123,10 @@ body {font-family: georgia, serif;
 		margin: 0;
 		padding: 0;}
 
+.list {text-align: center;
+		font-size:30px;
+	}
+
 .nav a {text-decoration: none;
 		font-size: 30px;
 		color: white;
@@ -126,6 +152,18 @@ body {font-family: georgia, serif;
  		margin-right: 20px;
  		}
 
+.footer {
+	width: 100%;
+	height: 100px;
+	background-color: black;
+	margin-top: 200px;
+}
+
+.endtext {color: white;
+		text-align: center;
+		position: relative;
+		top: 50px;}
+
 
 }
 
@@ -136,12 +174,16 @@ body {font-family: georgia, serif;
 .header {position:relative;
 		text-align:center;
 		margin-left:20px;
-		font-size: 100%;
+		font-size: 180%;
 		}
 
 .text{text-align: center;
-	font-size: 200%;
+	font-size: 160%;
 	font-kerning: 80%;
+	}
+
+.list {text-align: center;
+		font-size:30px;
 	}
 
 .box {width: 100%;
@@ -173,7 +215,17 @@ body {font-family: georgia, serif;
  		bottom: 50px;
  		}
 
+.footer {
+	width: 100%;
+	height: 100px;
+	background-color: black;
+	margin-top: 200px;
+}
 
+.endtext {color: white;
+		text-align: center;
+		position: relative;
+		top: 50px;}
 
 }
 
