--- a/portfolio.css
+++ b/portfolio.css
@@ -5,12 +5,22 @@ body {font-family: georgia, serif;
 .header {position: relative;
 		text-align: center;
 		font-size: 300%;
+		margin-bottom: 100px;
 		}
 
 .text{text-align: center;
 	font-size: 400%;
 	font-kerning: 80%;
+	margin-top: 80px;
+	animation:pulse 3s infinite;
 	}
+
+
+@keyframes pulse {
+	0% {transform: scale(.5);}
+	100% {transform: scale(1);}
+}
+
 
 .box {width: 100%;
 		height: 100px;
@@ -40,6 +50,17 @@ body {font-family: georgia, serif;
  		bottom:50px;
  		}
 
+.footer {
+	width: 100%;
+	height: 100px;
+	background-color: black;
+	margin-top: 200px;
+}
+
+.endtext {color: white;
+		text-align: center;
+		position: relative;
+		top: 50px;}
 
 @media all and (max-width: 992px) {
 
@@ -64,7 +85,7 @@ body {font-family: georgia, serif;
 	font-size: 400%;
 	font-kerning: 80%;
 	}
-				
+
 .nav a {text-decoration: none;
 		font-size: 40px;
 		color: white;
@@ -133,6 +154,19 @@ body {font-family: georgia, serif;
  		margin-right: 20px;
  		}
 
+.footer {
+	width: 100%;
+	height: 150px;
+	background-color: black;
+	margin-top: 300px;
+	}
+
+.endtext {color: white;
+		text-align: center;
+		position: relative;
+		top: 50px;
+		}
+
 }
 
 @media all and (min-width: 481px) and (max-width: 768px)
@@ -142,7 +176,7 @@ body {font-family: georgia, serif;
 .header {position:relative;
 		text-align:center;
 		margin-left:20px;
-		font-size: 100%;
+		font-size: 150%;
 		}
 
 .text{text-align: center;
@@ -162,7 +196,7 @@ body {font-family: georgia, serif;
 		}
 
 #link2 a {position: relative;
-		left: 280px;
+		left: 310px;
 		}
 
  #link3 a {position:relative;
@@ -175,5 +209,17 @@ body {font-family: georgia, serif;
 		background-color: black;
 		margin: 0;
 		}
+
+.footer {
+	width: 100%;
+	height: 100px;
+	background-color: black;
+	margin-top: 300px;
+}
+
+.endtext {color: white;
+		text-align: center;
+		position: relative;
+		top: 50px;}
 
 }
